# tree-sitter-asm6502

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  OpcodesAndDirectives.js  Package.swift  README.md  asm6502-kickassembler.dylib  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-asm6502.wasm  tree-sitter.json
.build/x86_64-apple-macosx/debug/TreeSitterAsm.build/: module.modulemap
.build/x86_64-apple-macosx/debug/TreeSitterAsm6502.build/: module.modulemap
.build/x86_64-apple-macosx/debug/index/db/v13/p74969--98b5dc/: lock.mdb
bindings/c/: tree-sitter-asm6502.h  tree-sitter-asm6502.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_asm6502/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterAsm/: asm.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: Acc.test  BasicInst.test  Comments.test  ComplexTest.test  ConflictingAddrModes.test  DiffAddrModes.test  Directives.test  HexAndDecNumbers.test  Identifiers.test  LabelsAndInst.test  RelBranching.test  Strings.test
test/highlight/: 6502.asm  highlight.asm
